syntax = "proto3";

package prices;

option go_package = "github.com/timakaa/historical-common/proto";

service Prices {
  rpc GetPrices (PricesRequest) returns (stream PricesResponse) {}
}

message PricesRequest {
  string ticker = 1;
  string exchange = 2;
  int64 limit = 3;
}

message PricesResponse {
  string Date = 1;
  double Open = 2;
  double High = 3;
  double Low = 4;
  double Close = 5;
  double Volume = 6;
}